// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Checkbox control data v0 when value is false: resolvedValue 1`] = `false`;

exports[`Page Checkbox control data v0 when value is false: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": false,
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Checkbox control data v0 when value is true: resolvedValue 1`] = `true`;

exports[`Page Checkbox control data v0 when value is true: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": true,
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Checkbox control data v0 when value is undefined: resolvedValue 1`] = `undefined`;

exports[`Page Checkbox control data v0 when value is undefined: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": undefined,
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Checkbox control data v1 when value is false: resolvedValue 1`] = `false`;

exports[`Page Checkbox control data v1 when value is false: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "@@makeswift/type": "checkbox::v1",
                  "value": false,
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Checkbox control data v1 when value is true: resolvedValue 1`] = `true`;

exports[`Page Checkbox control data v1 when value is true: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "@@makeswift/type": "checkbox::v1",
                  "value": true,
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Checkbox control data v1 when value is undefined: resolvedValue 1`] = `undefined`;

exports[`Page Checkbox control data v1 when value is undefined: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": undefined,
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;
